# example-standalone-inferencing-espressif-esp32

./: CMakeLists.txt  sdkconfig.old
components/ai-esp/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
